# crewai-research001

./: README.md  pyproject.toml  report.md
src/hello_ai/: crew.py  discord_bot.py  main.py
src/hello_ai/config/: agents.yaml  tasks.yaml
src/hello_ai/tools/: visual_tools.py
